--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings"></string>
     <string name="preference_file_key"></string>
+    <string name="title_activity_vault">vault</string>
+    <string name="title_activity_select_photo">selectPhoto</string>
 </resources>
